[package]
name = "chatstep"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
regex = "1.5"
serde_json = "1.0"
whoami = "1.0"
