[package]
name = "chatstep"
version = "0.2.0"
edition = "2021"
description = "支持在与AI对话时执行Shell命令"
license = "MIT"
repository = "https://gitee.com/qwe12345678/chat-step"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "4.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
whoami = "1.2"
regex = "1"
dotenv = "0.15"
